--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,10 @@
         "stat.h": "c",
         "lv_examples.h": "c",
         "lv_example_libs.h": "c",
-        "lv_example_png.h": "c"
+        "lv_example_png.h": "c",
+        "array": "c",
+        "string": "c",
+        "string_view": "c"
     },
     "idf.adapterTargetName": "esp32s3",
     "idf.openOcdConfigs": [
